--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -666,10 +666,10 @@
      <widget class="QLabel" name="atc_label">
       <property name="geometry">
        <rect>
-        <x>464</x>
+        <x>396</x>
         <y>13</y>
-        <width>61</width>
-        <height>16</height>
+        <width>191</width>
+        <height>20</height>
        </rect>
       </property>
       <property name="font">
@@ -682,16 +682,16 @@
        <cursorShape>PointingHandCursor</cursorShape>
       </property>
       <property name="text">
-       <string>ATC List</string>
+       <string>Controller's connected from</string>
       </property>
      </widget>
      <widget class="QLabel" name="pilot_list">
       <property name="geometry">
        <rect>
-        <x>455</x>
+        <x>417</x>
         <y>193</y>
-        <width>81</width>
-        <height>16</height>
+        <width>141</width>
+        <height>20</height>
        </rect>
       </property>
       <property name="font">
@@ -704,7 +704,7 @@
        <cursorShape>PointingHandCursor</cursorShape>
       </property>
       <property name="text">
-       <string>PILOT List</string>
+       <string>Pilot's conected from</string>
       </property>
      </widget>
      <widget class="QLabel" name="flagIcon">
@@ -726,9 +726,9 @@
      <widget class="QTableWidget" name="ATCtableWidget">
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>5</x>
         <y>30</y>
-        <width>991</width>
+        <width>1000</width>
         <height>161</height>
        </rect>
       </property>
@@ -742,6 +742,9 @@
       </property>
       <property name="autoFillBackground">
        <bool>true</bool>
+      </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
       </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
@@ -835,9 +838,9 @@
      <widget class="QTableWidget" name="PilottableWidget">
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>5</x>
         <y>210</y>
-        <width>991</width>
+        <width>1000</width>
         <height>191</height>
        </rect>
       </property>
@@ -851,6 +854,9 @@
       </property>
       <property name="autoFillBackground">
        <bool>true</bool>
+      </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
       </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
@@ -871,7 +877,7 @@
        <enum>QAbstractItemView::SelectRows</enum>
       </property>
       <property name="textElideMode">
-       <enum>Qt::ElideMiddle</enum>
+       <enum>Qt::ElideRight</enum>
       </property>
       <property name="gridStyle">
        <enum>Qt::DotLine</enum>
@@ -892,7 +898,7 @@
        <number>95</number>
       </attribute>
       <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
-       <bool>true</bool>
+       <bool>false</bool>
       </attribute>
       <attribute name="horizontalHeaderStretchLastSection">
        <bool>true</bool>
@@ -905,7 +911,7 @@
       </attribute>
       <column>
        <property name="text">
-        <string>Airline</string>
+        <string>Airlines</string>
        </property>
       </column>
       <column>
@@ -957,9 +963,9 @@
      <widget class="QLabel" name="Inbound_traffic">
       <property name="geometry">
        <rect>
-        <x>190</x>
+        <x>8</x>
         <y>403</y>
-        <width>111</width>
+        <width>471</width>
         <height>20</height>
        </rect>
       </property>
@@ -973,12 +979,12 @@
        <string>Inbound Traffic</string>
       </property>
      </widget>
-     <widget class="QLabel" name="outbound_traffic">
+     <widget class="QLabel" name="Outbound_traffic">
       <property name="geometry">
        <rect>
-        <x>715</x>
+        <x>495</x>
         <y>403</y>
-        <width>121</width>
+        <width>341</width>
         <height>20</height>
        </rect>
       </property>
@@ -992,30 +998,28 @@
        <string>Outbound Traffic</string>
       </property>
      </widget>
-     <widget class="QTableView" name="OutboundTableView">
-      <property name="geometry">
-       <rect>
-        <x>496</x>
-        <y>422</y>
-        <width>521</width>
-        <height>193</height>
-       </rect>
-      </property>
-      <property name="selectionMode">
-       <enum>QAbstractItemView::SingleSelection</enum>
-      </property>
-     </widget>
-     <widget class="QTableView" name="InboundTableView">
+     <widget class="QTableWidget" name="InboundTableWidget">
       <property name="geometry">
        <rect>
         <x>5</x>
         <y>422</y>
-        <width>481</width>
-        <height>193</height>
+        <width>479</width>
+        <height>191</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
       </property>
       <property name="cursor" stdset="0">
        <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="autoFillBackground">
+       <bool>true</bool>
+      </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
       </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
@@ -1035,9 +1039,154 @@
       <property name="selectionBehavior">
        <enum>QAbstractItemView::SelectRows</enum>
       </property>
+      <property name="textElideMode">
+       <enum>Qt::ElideMiddle</enum>
+      </property>
       <property name="gridStyle">
        <enum>Qt::DotLine</enum>
       </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
+      </property>
+      <property name="wordWrap">
+       <bool>false</bool>
+      </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>110</number>
+      </attribute>
+      <attribute name="horizontalHeaderHighlightSections">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="horizontalHeaderMinimumSectionSize">
+       <number>110</number>
+      </attribute>
+      <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="verticalHeaderDefaultSectionSize">
+       <number>20</number>
+      </attribute>
+      <attribute name="verticalHeaderMinimumSectionSize">
+       <number>20</number>
+      </attribute>
+      <column>
+       <property name="text">
+        <string>Airlines</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Departure</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Destination</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Flight</string>
+       </property>
+      </column>
+     </widget>
+     <widget class="QTableWidget" name="OutboundTableWidget">
+      <property name="geometry">
+       <rect>
+        <x>492</x>
+        <y>422</y>
+        <width>512</width>
+        <height>191</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
+      </property>
+      <property name="cursor" stdset="0">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="autoFillBackground">
+       <bool>true</bool>
+      </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
+      <property name="tabKeyNavigation">
+       <bool>false</bool>
+      </property>
+      <property name="showDropIndicator" stdset="0">
+       <bool>false</bool>
+      </property>
+      <property name="dragDropOverwriteMode">
+       <bool>false</bool>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::SingleSelection</enum>
+      </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectRows</enum>
+      </property>
+      <property name="textElideMode">
+       <enum>Qt::ElideMiddle</enum>
+      </property>
+      <property name="gridStyle">
+       <enum>Qt::DotLine</enum>
+      </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
+      </property>
+      <property name="wordWrap">
+       <bool>false</bool>
+      </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>110</number>
+      </attribute>
+      <attribute name="horizontalHeaderHighlightSections">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="horizontalHeaderMinimumSectionSize">
+       <number>110</number>
+      </attribute>
+      <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="verticalHeaderDefaultSectionSize">
+       <number>20</number>
+      </attribute>
+      <attribute name="verticalHeaderMinimumSectionSize">
+       <number>20</number>
+      </attribute>
+      <column>
+       <property name="text">
+        <string>Airlines</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Departure</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Destination</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Flight</string>
+       </property>
+      </column>
      </widget>
     </widget>
     <widget class="QWidget" name="map">
@@ -1224,7 +1373,7 @@
       </attribute>
       <column>
        <property name="text">
-        <string>Airline</string>
+        <string>Airlines</string>
        </property>
       </column>
       <column>
