--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -958,9 +958,9 @@
      <widget class="QLabel" name="Inbound_traffic">
       <property name="geometry">
        <rect>
-        <x>7</x>
+        <x>44</x>
         <y>403</y>
-        <width>491</width>
+        <width>451</width>
         <height>20</height>
        </rect>
       </property>
@@ -977,9 +977,9 @@
      <widget class="QLabel" name="Outbound_traffic">
       <property name="geometry">
        <rect>
-        <x>505</x>
+        <x>545</x>
         <y>403</y>
-        <width>491</width>
+        <width>451</width>
         <height>20</height>
        </rect>
       </property>
@@ -1202,6 +1202,38 @@
         <string>Flight</string>
        </property>
       </column>
+     </widget>
+     <widget class="QLabel" name="arrivals_icon">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>400</y>
+        <width>31</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="departures_icon">
+      <property name="geometry">
+       <rect>
+        <x>510</x>
+        <y>400</y>
+        <width>31</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
      </widget>
     </widget>
     <widget class="QWidget" name="controllers">
@@ -1626,7 +1658,7 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>19</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMenu">
