--- a/QtUI/PilotInfo_UI.ui
+++ b/QtUI/PilotInfo_UI.ui
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>QPlayerInfo</class>
- <widget class="QMainWindow" name="QPlayerInfo">
+ <class>QPilotInfo</class>
+ <widget class="QMainWindow" name="QPilotInfo">
   <property name="windowModality">
    <enum>Qt::NonModal</enum>
+  </property>
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>491</width>
+    <height>500</height>
+   </rect>
   </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -14,20 +22,20 @@
   <property name="minimumSize">
    <size>
     <width>491</width>
-    <height>360</height>
+    <height>500</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>491</width>
-    <height>360</height>
+    <height>500</height>
    </size>
   </property>
   <property name="cursor">
    <cursorShape>PointingHandCursor</cursorShape>
   </property>
   <property name="windowTitle">
-   <string>Info of Player</string>
+   <string>Flight Info</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="cursor">
@@ -37,7 +45,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>17</y>
+      <y>47</y>
       <width>57</width>
       <height>14</height>
      </rect>
@@ -45,6 +53,8 @@
     <property name="font">
      <font>
       <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
      </font>
     </property>
     <property name="cursor">
@@ -58,7 +68,7 @@
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>12</y>
+      <y>42</y>
       <width>121</width>
       <height>25</height>
      </rect>
@@ -79,7 +89,7 @@
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>12</y>
+      <y>42</y>
       <width>121</width>
       <height>25</height>
      </rect>
@@ -100,7 +110,7 @@
     <property name="geometry">
      <rect>
       <x>253</x>
-      <y>17</y>
+      <y>47</y>
       <width>51</width>
       <height>16</height>
      </rect>
@@ -108,6 +118,8 @@
     <property name="font">
      <font>
       <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
      </font>
     </property>
     <property name="cursor">
@@ -121,7 +133,7 @@
     <property name="geometry">
      <rect>
       <x>56</x>
-      <y>148</y>
+      <y>188</y>
       <width>381</width>
       <height>10</height>
      </rect>
@@ -145,7 +157,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>140</y>
+      <y>180</y>
       <width>31</width>
       <height>25</height>
      </rect>
@@ -166,7 +178,7 @@
     <property name="geometry">
      <rect>
       <x>441</x>
-      <y>140</y>
+      <y>180</y>
       <width>31</width>
       <height>25</height>
      </rect>
@@ -187,7 +199,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>70</y>
+      <y>110</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -195,6 +207,8 @@
     <property name="font">
      <font>
       <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
      </font>
     </property>
     <property name="cursor">
@@ -208,14 +222,16 @@
     <property name="geometry">
      <rect>
       <x>253</x>
-      <y>70</y>
-      <width>71</width>
+      <y>110</y>
+      <width>81</width>
       <height>20</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
      </font>
     </property>
     <property name="cursor">
@@ -229,7 +245,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>90</y>
+      <y>130</y>
       <width>231</width>
       <height>20</height>
      </rect>
@@ -250,7 +266,7 @@
     <property name="geometry">
      <rect>
       <x>253</x>
-      <y>90</y>
+      <y>130</y>
       <width>231</width>
       <height>20</height>
      </rect>
@@ -271,17 +287,20 @@
     <property name="geometry">
      <rect>
       <x>8</x>
-      <y>195</y>
+      <y>305</y>
       <width>476</width>
       <height>111</height>
      </rect>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLabel" name="FlightPlan_label">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>175</y>
+      <y>285</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -289,6 +308,8 @@
     <property name="font">
      <font>
       <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
      </font>
     </property>
     <property name="cursor">
@@ -301,8 +322,8 @@
    <widget class="QPushButton" name="AddFriend">
     <property name="geometry">
      <rect>
-      <x>88</x>
-      <y>320</y>
+      <x>90</x>
+      <y>470</y>
       <width>99</width>
       <height>23</height>
      </rect>
@@ -322,8 +343,8 @@
    <widget class="QPushButton" name="ShowMap">
     <property name="geometry">
      <rect>
-      <x>198</x>
-      <y>320</y>
+      <x>200</x>
+      <y>470</y>
       <width>99</width>
       <height>23</height>
      </rect>
@@ -337,14 +358,14 @@
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="text">
-     <string>Show in Map</string>
+     <string>View on Map</string>
     </property>
    </widget>
    <widget class="QPushButton" name="Close">
     <property name="geometry">
      <rect>
-      <x>308</x>
-      <y>320</y>
+      <x>310</x>
+      <y>470</y>
       <width>99</width>
       <height>23</height>
      </rect>
@@ -359,6 +380,275 @@
     </property>
     <property name="text">
      <string>Close</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="GroundSpeed_label">
+    <property name="geometry">
+     <rect>
+      <x>195</x>
+      <y>210</y>
+      <width>101</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Ground Speed</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="GroundSpeedNumber">
+    <property name="geometry">
+     <rect>
+      <x>195</x>
+      <y>230</y>
+      <width>91</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="AltitudeNumber">
+    <property name="geometry">
+     <rect>
+      <x>375</x>
+      <y>230</y>
+      <width>91</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Altitude_label">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>210</y>
+      <width>61</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Altitude</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="FlightStatusNumber">
+    <property name="geometry">
+     <rect>
+      <x>16</x>
+      <y>230</y>
+      <width>91</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="FlightStatus_label">
+    <property name="geometry">
+     <rect>
+      <x>16</x>
+      <y>210</y>
+      <width>91</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Flight Status</string>
+    </property>
+   </widget>
+   <widget class="Line" name="line1">
+    <property name="geometry">
+     <rect>
+      <x>15</x>
+      <y>75</y>
+      <width>461</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>420</y>
+      <width>461</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="PilotInfo">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>121</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Pilot in Command</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="FlightDetails">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>90</y>
+      <width>91</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Flight Details</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="PilotNameText">
+    <property name="geometry">
+     <rect>
+      <x>129</x>
+      <y>6</y>
+      <width>181</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Home">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>10</y>
+      <width>41</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Home</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="HomeFlag">
+    <property name="geometry">
+     <rect>
+      <x>397</x>
+      <y>5</y>
+      <width>31</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
