--- a/QtUI/SettingWindow_UI.ui
+++ b/QtUI/SettingWindow_UI.ui
@@ -52,6 +52,9 @@
       <pointsize>8</pointsize>
      </font>
     </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
     <property name="text">
      <string>Accept</string>
     </property>
@@ -69,6 +72,9 @@
      <font>
       <pointsize>8</pointsize>
      </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="text">
      <string>Setting Time for Update Info in minutes</string>
@@ -131,7 +137,7 @@
      <rect>
       <x>20</x>
       <y>79</y>
-      <width>41</width>
+      <width>71</width>
       <height>16</height>
      </rect>
     </property>
@@ -140,8 +146,11 @@
       <pointsize>8</pointsize>
      </font>
     </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
     <property name="text">
-     <string>Host</string>
+     <string>Host  http://</string>
     </property>
    </widget>
    <widget class="QLabel" name="proxy_port">
@@ -150,9 +159,9 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>21</x>
+      <x>60</x>
       <y>103</y>
-      <width>41</width>
+      <width>31</width>
       <height>16</height>
      </rect>
     </property>
@@ -160,6 +169,9 @@
      <font>
       <pointsize>8</pointsize>
      </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="text">
      <string>Port</string>
@@ -171,9 +183,9 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>15</x>
-      <y>180</y>
-      <width>81</width>
+      <x>30</x>
+      <y>178</y>
+      <width>71</width>
       <height>16</height>
      </rect>
     </property>
@@ -181,6 +193,9 @@
      <font>
       <pointsize>8</pointsize>
      </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="text">
      <string>Username</string>
@@ -192,9 +207,9 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>15</x>
-      <y>207</y>
-      <width>71</width>
+      <x>31</x>
+      <y>205</y>
+      <width>61</width>
       <height>16</height>
      </rect>
     </property>
@@ -202,6 +217,9 @@
      <font>
       <pointsize>8</pointsize>
      </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="text">
      <string>Password</string>
@@ -237,16 +255,16 @@
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QTextEdit" name="textEdit_host">
+   <widget class="QLineEdit" name="lineEdit_host">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>73</y>
-      <width>151</width>
-      <height>27</height>
+      <x>90</x>
+      <y>75</y>
+      <width>181</width>
+      <height>22</height>
      </rect>
     </property>
     <property name="font">
@@ -255,52 +273,16 @@
      </font>
     </property>
    </widget>
-   <widget class="QTextEdit" name="textEdit_port">
+   <widget class="QLineEdit" name="lineEdit_port">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>98</y>
-      <width>151</width>
-      <height>27</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>8</pointsize>
-     </font>
-    </property>
-   </widget>
-   <widget class="QTextEdit" name="textEdit_user">
-    <property name="enabled">
-     <bool>false</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>175</y>
-      <width>151</width>
-      <height>27</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>8</pointsize>
-     </font>
-    </property>
-   </widget>
-   <widget class="QTextEdit" name="textEdit_pass">
-    <property name="enabled">
-     <bool>false</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>200</y>
-      <width>151</width>
-      <height>27</height>
+      <x>90</x>
+      <y>100</y>
+      <width>51</width>
+      <height>22</height>
      </rect>
     </property>
     <property name="font">
@@ -309,10 +291,52 @@
      </font>
     </property>
     <property name="inputMethodHints">
-     <set>Qt::ImhHiddenText</set>
+     <set>Qt::ImhDigitsOnly|Qt::ImhFormattedNumbersOnly|Qt::ImhPreferNumbers</set>
     </property>
-    <property name="textInteractionFlags">
-     <set>Qt::TextEditorInteraction</set>
+    <property name="inputMask">
+     <string>00000; </string>
+    </property>
+    <property name="maxLength">
+     <number>5</number>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_user">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>175</y>
+      <width>181</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_pass">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>201</y>
+      <width>181</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="echoMode">
+     <enum>QLineEdit::Password</enum>
     </property>
    </widget>
   </widget>
