--- a/QtUI/PilotInfo_UI.ui
+++ b/QtUI/PilotInfo_UI.ui
@@ -3,7 +3,7 @@
  <class>QPilotInfo</class>
  <widget class="QMainWindow" name="QPilotInfo">
   <property name="windowModality">
-   <enum>Qt::NonModal</enum>
+   <enum>Qt::WindowModal</enum>
   </property>
   <property name="geometry">
    <rect>
@@ -34,8 +34,14 @@
   <property name="cursor">
    <cursorShape>PointingHandCursor</cursorShape>
   </property>
+  <property name="focusPolicy">
+   <enum>Qt::StrongFocus</enum>
+  </property>
   <property name="windowTitle">
    <string>Flight Info</string>
+  </property>
+  <property name="dockOptions">
+   <set>QMainWindow::AnimatedDocks</set>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="cursor">
@@ -64,12 +70,12 @@
      <string>Callsign</string>
     </property>
    </widget>
-   <widget class="QLabel" name="airline_image">
+   <widget class="QLabel" name="callsign_text">
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>42</y>
-      <width>121</width>
+      <y>41</y>
+      <width>51</width>
       <height>25</height>
      </rect>
     </property>
@@ -156,7 +162,7 @@
    <widget class="QLabel" name="DepartureImage">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>30</x>
       <y>180</y>
       <width>31</width>
       <height>25</height>
@@ -283,7 +289,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QTextEdit" name="FlightPlanText">
+   <widget class="QTextEdit" name="RouteText">
     <property name="geometry">
      <rect>
       <x>8</x>
@@ -296,12 +302,12 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="FlightPlan_label">
+   <widget class="QLabel" name="Route_label">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>285</y>
-      <width>71</width>
+      <width>41</width>
       <height>16</height>
      </rect>
     </property>
@@ -316,7 +322,7 @@
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="text">
-     <string>Flight Plan</string>
+     <string>Route</string>
     </property>
    </widget>
    <widget class="QPushButton" name="AddFriend">
@@ -408,9 +414,9 @@
    <widget class="QLabel" name="GroundSpeedNumber">
     <property name="geometry">
      <rect>
-      <x>195</x>
-      <y>230</y>
-      <width>91</width>
+      <x>290</x>
+      <y>208</y>
+      <width>41</width>
       <height>20</height>
      </rect>
     </property>
@@ -429,9 +435,9 @@
    <widget class="QLabel" name="AltitudeNumber">
     <property name="geometry">
      <rect>
-      <x>375</x>
-      <y>230</y>
-      <width>91</width>
+      <x>435</x>
+      <y>208</y>
+      <width>41</width>
       <height>20</height>
      </rect>
     </property>
@@ -450,7 +456,7 @@
    <widget class="QLabel" name="Altitude_label">
     <property name="geometry">
      <rect>
-      <x>390</x>
+      <x>380</x>
       <y>210</y>
       <width>61</width>
       <height>16</height>
@@ -473,9 +479,9 @@
    <widget class="QLabel" name="FlightStatusNumber">
     <property name="geometry">
      <rect>
-      <x>16</x>
-      <y>230</y>
-      <width>91</width>
+      <x>105</x>
+      <y>208</y>
+      <width>51</width>
       <height>20</height>
      </rect>
     </property>
@@ -590,7 +596,7 @@
     <property name="geometry">
      <rect>
       <x>129</x>
-      <y>6</y>
+      <y>5</y>
       <width>181</width>
       <height>25</height>
      </rect>
@@ -651,8 +657,134 @@
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="airline_image">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>42</y>
+      <width>111</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="PobText">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>248</y>
+      <width>51</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="TransponderText">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>248</y>
+      <width>41</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="TransponderLabel">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>250</y>
+      <width>91</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Transponder</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="POBLabel">
+    <property name="geometry">
+     <rect>
+      <x>16</x>
+      <y>250</y>
+      <width>141</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Passengers on Board</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>Close</sender>
+   <signal>clicked()</signal>
+   <receiver>QPilotInfo</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>359</x>
+     <y>481</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>245</x>
+     <y>249</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
